--- a/livroJS/cap04/css/style.css
+++ b/livroJS/cap04/css/style.css
@@ -9,7 +9,6 @@ main {
   flex-flow: row wrap;
 }
 .imagem {
-  text-align: center;
   flex-basis: 250px;
 }
 img {
@@ -19,8 +18,13 @@ img {
   border-radius: 20px;
 }
 .formulario {
-  margin-top: 30px;
-  flex-basis: 250px;
+  width: 200px;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 5px;
+  margin-top: 10px;
+  flex-grow: 0;
+
 }
 h1 {
   border-bottom-style: inset;
@@ -28,4 +32,8 @@ h1 {
 }
 label {
   font-weight: bold;
+}
+
+.jsEntrada {
+  width: 60px;
 }
