--- a/livroJS/cap06/css/style.css
+++ b/livroJS/cap06/css/style.css
@@ -12,12 +12,12 @@ main {
   flex-flow: row wrap;
 }
 .imagem {
-  flex-basis: 250px;
+  flex-basis: 320px;
 }
 img {
   float: left;
   height: 300px;
-  width: 200px;
+  width: 300px;
   border-radius: 20px;
 }
 .formulario {
@@ -48,4 +48,12 @@ pre {
   font-family: 'Courier New', Courier, monospace;
   font-size:medium;
   color: blue;
+}
+
+.oculta {
+  display: none;
+}
+
+.exibe {
+  display: inline;
 }
