Exercise Coding Update

--- a/livroJS/cap09/css/style.css
+++ b/livroJS/cap09/css/style.css
@@ -74,8 +74,10 @@ pre {
 .cores-Farroupilha {
   color: green;
   background-color: white;
+}.cores-Vasco {
+  color: white;
+  background-color: black;
 }
-
 
 .oculta {
   display: none;
