--- a/livroJS/cap09/css/style.css
+++ b/livroJS/cap09/css/style.css
@@ -5,9 +5,11 @@ body {
   background-color: antiquewhite;
 }
 main {
-  border: 2px solid lightslategray;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border: 5px solid black;
   border-radius: 10px;
-  padding: 10px;
   display: flex;
   flex-flow: row wrap;
 }
@@ -56,16 +58,6 @@ label {
 
 .alinha-direita {
   text-align: right;
-}
-
-pre {
-  width: 500px;
-  padding: 5px;
-  border: 1px solid black;
-  border-radius: 10px;
-  font-family: 'Courier New', Courier, monospace;
-  font-size:medium;
-  color: blue;
 }
 
 .cores-Brasil {
