--- a/livroJS/cap10/css/style.css
+++ b/livroJS/cap10/css/style.css
@@ -14,6 +14,11 @@ img {
   border-width: 0.5em;
 }
 
+.animaNum {
+  padding: 0px;
+  border-style: none;
+}
+
 .tarefa-selecionada {
   background-color: lightblue;
   color: red;
