--- a/livroJS/cap10/css/style.css
+++ b/livroJS/cap10/css/style.css
@@ -6,12 +6,13 @@ h1 {
 }
 
 img {
+  width: 200px;
   margin: 10px;
   padding: 5px;
   border-radius: 30px;
   border-color: aqua;
   border-style: groove;
-  border-width: 0.5em;
+  border-width: 0.3em;
 }
 
 #mainDiv {
