--- a/livroJS/cap11/css/style.css
+++ b/livroJS/cap11/css/style.css
@@ -43,6 +43,14 @@ h6 {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.icone {
+  width: 17px;
+}
+
+.icone:hover {
+  cursor: pointer;
+}
+
 pre {
   font-style: italic;
   font-size: 1.1em;
