--- a/react-course/controle-livros/src/MenuSuperior.css
+++ b/react-course/controle-livros/src/MenuSuperior.css
@@ -6,6 +6,11 @@ h1 {
   margin-left: 25px;
 }
 
+h1 > a {
+   color:rgb(224, 90, 36);
+   text-decoration: none;
+}
+
 div.principal {
   background-color: #2d3046;
   display:block;
@@ -31,19 +36,43 @@ div.navbar {
   padding: 0px 0px;
 }
 
+ul {
+  display: flex;
+  list-style: none; /* remove os marcadores padrão */
+  margin: 0px;
+  padding: 0px 0px;
+}
 li {
-  border: none;
-  color: white;
-  background: none;
+  padding: 0px 0px;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  color:antiquewhite;
   cursor: pointer;
   width: 100px;
   height: 84px;
+
+}
+
+li > a {
+  display: block; /* Faz o link ocupar toda a área */
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 84px; /* Centraliza verticalmente o texto */
+  font-size: small;
+  text-decoration: none;
+  color: #9494a1;
 }
 
 li:hover {
   background-color: #363f90;
+  border-radius: 5px;
+  border-color:black;
+}
+
+li > a:hover {
   color: white;
-  border-radius: 10px;
 }
 
 @media screen and (max-width: 740px) {
@@ -54,6 +83,11 @@ li:hover {
     text-align: center;
     font-size: larger;
   }
+
+  h1 > a {
+   font-size:larger;
+   text-decoration: none;
+}
   
  div.principal {
   width: 95%;
@@ -71,6 +105,16 @@ li:hover {
   flex-flow: row wrap;
   justify-content: center;
   padding: 0px 0px;
+  }
+
+  li {
+    margin-top: 5px;
+    height: 30px;
+  }
+
+  li > a {
+    font-size: small;
+    line-height: 32px; 
   }
 
   button {
