--- a/react-course/controle-livros/src/MenuSuperior.css
+++ b/react-course/controle-livros/src/MenuSuperior.css
@@ -1,9 +1,11 @@
 
 h1 {
-  font-weight: 800;
+  font-weight: 600;
+  font-size: 25px;
   color: #9494a1;
   text-align: start;
   margin-left: 25px;
+  margin-top: 25px;
 }
 
 h1 > a {
@@ -13,7 +15,7 @@ h1 > a {
 
 div.principal {
   background-color: #2d3046;
-  display:block;
+  display:inline-block;
   position: relative;
   flex-flow: row wrap;
   width: 100%;
@@ -25,6 +27,10 @@ div.principal {
 
 div.titulo {
   display: flex;
+  position: absolute;
+  flex-flow: row wrap;
+  top: 0;
+  left: 0;
 }
 
 div.navbar {
@@ -75,13 +81,24 @@ li > a:hover {
   color: white;
 }
 
+div.logo {
+  display: flex;
+  margin: 5px;
+}
+
+.logo > img {
+  justify-content: center;
+  margin: auto;
+  width: 100px;
+  border-radius: 20px;
+}
+
 @media screen and (max-width: 740px) {
 
   h1 {
     margin: 10px 0px;
     padding: 0px 0px;
-    text-align: center;
-    font-size: larger;
+    font-size: 15px;
   }
 
   h1 > a {
@@ -91,19 +108,22 @@ li > a:hover {
   
  div.principal {
   width: 95%;
+  display: flex;
   flex-flow: row wrap;
   }
 
   div.titulo {
   display: flex;
-  flex-flow: column wrap;
+  position: absolute;
+  flex-flow: row wrap;
 }
 
   div.navbar {
   position: relative;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   justify-content: center;
+  margin-top: 45px;
   padding: 0px 0px;
   }
 
@@ -125,5 +145,17 @@ li > a:hover {
   button:hover {
     border-radius: 3px;
   }
+
+  div.logo {
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  .logo > img {
+  justify-content: right;
+  width: 100px;
+  border-radius: 10px;
+}
 
 }
