--- a/prj-Polifonia/css/style.css
+++ b/prj-Polifonia/css/style.css
@@ -146,7 +146,8 @@ hr {
 
 .btn-secondary {
     width: 100%;
-    padding: 10px;
+    margin-top: 10px;
+    padding: 15px;
     background-color: transparent;
     color: white;
     border: 1px solid #8b1a1a;
