Organização do código e correções export .csv
Realizada a organização do códig, separando todo o css dos arquivos html e criando arquivos com o mesmo nome na pasta css dp projeto. Feita a manutenção da funcionalidade de export dos dados para um arquivo .csv, empregando os mesmos filtros do histórico de vendas do PDV.

--- a/prj-Polifonia/css/venda.css
+++ b/prj-Polifonia/css/venda.css
@@ -1,12 +1,11 @@
-
 /* CSS do modal de Editar Venda */
 
-.modal-content {
+#edit-venda {
   background-color: #161b22;
 }
 
-.titulo-modal {
-  color: whitesmoke;
+h3.titulo-modal {
+  color: #ccc;
   padding-bottom: 10px;
 }
 
@@ -19,3 +18,5 @@
    color: rgb(242, 240, 240); 
    border: 1px solid #ccc;
 }
+
+   
