--- a/prj-Polifonia/css/style.css
+++ b/prj-Polifonia/css/style.css
@@ -478,15 +478,37 @@ td {
     background: none;
     border: 1px solid #1f6feb;
     color: #1f6feb;
-    padding: 4px 8px;
+    padding: 5px 6px;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 0.75rem;
+    font-size: 0.6rem;
     font-weight: bold;
 }
 
 .btn-edit:hover {
     background-color: rgba(31, 111, 235, 0.1);
+}
+
+/* Estilo do Botão de Excluir (Vazado) */
+
+.btn-delete {
+    background: transparent;
+    border: 1px solid #da3633; /* Vermelho alerta */
+    color: #da3633;
+    padding: 5px 6px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: 0.7rem;
+    line-height: 1;
+    margin-left: 0px;
+}
+
+/* Efeito Hover: Preenche o fundo e muda a cor do ícone */
+.btn-delete:hover {
+    background: #da3633;
+    color: #ffffff;
+    box-shadow: 0 0 8px rgba(218, 54, 51, 0.4);
 }
 
 /* ... (Estilos anteriores) ... */
