--- a/prj-Polifonia/css/admin.css
+++ b/prj-Polifonia/css/admin.css
@@ -30,7 +30,7 @@
   width: auto;
 }
 
-/* Estilo do botão de exclusão que você escolheu */
+/* Estilo do botão de exclusão que você escolheu 
 .btn-delete-x {
     background: transparent;
     border: 1px solid #da3633; 
@@ -48,7 +48,7 @@
   background: #da3633; 
   color: white; 
 }
-
+*/
 /* Estilos da tela modal */
 .modal-content {
   background-color: #161b22; 
