--- a/prj-Polifonia/css/venda.css
+++ b/prj-Polifonia/css/venda.css
@@ -19,4 +19,11 @@ h3.titulo-modal {
    border: 1px solid #ccc;
 }
 
+/* Configuração de Impressão */
+@media print {
+    body * { visibility: hidden; }
+    #receipt-modal, #receipt-modal * { visibility: visible; }
+    #receipt-modal { position: absolute; left: 0; top: 0; background: white; }
+    .modal-actions { display: none; }
+}
    
